<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/content_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ihstowers.iptoutdoorgensizing.ResultActivity"
        tools:showIn="@layout/activity_result">


        <android.support.v7.widget.CardView
            android:id="@+id/IchCardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Ich"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/battery_charge_current_a"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222" />
                <TextView
                    android:id="@+id/t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/autonomy"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/s"
                    android:layout_marginTop="10dp"
                    android:text="@string/generator_capacity_kva"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/nn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nn"
                    android:layout_marginTop="10dp"
                    android:text="@string/nomber_of_rectifiers_need"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Input Data"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="48dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EditKindIconStyle"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_flash_on_black_24dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/i"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="150dip"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text="@string/load_current_a"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="48dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EditKindIconStyle"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_battery_charging_full_black_24dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="150dip"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text="@string/battery_capacity_ah"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_n"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="48dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EditKindIconStyle"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_battery_charging_full_black_24dp"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/n"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text="@string/nomber_of_battery_string"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="48dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EditKindIconStyle"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_rectifier" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text="@string/rectifier_module_size_w"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="48dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EditKindIconStyle"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_aircon_24dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/paircon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:saveEnabled="false"
                            android:text="@string/aircon_size"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>